--- a/newsletter-sign-up-with-success-message-main/index.html
+++ b/newsletter-sign-up-with-success-message-main/index.html
@@ -31,11 +31,13 @@
     </style>
   </head>
   <body>
+<!-- <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64"><defs><linearGradient id="a" x1="100%" x2="0%" y1="0%" y2="100%"><stop offset="0%" stop-color="#FF6A3A"/><stop offset="100%" stop-color="#FF527B"/></linearGradient></defs><g fill="none"><circle cx="32" cy="32" r="32" fill="url(#a)"/><path stroke="#FFF" stroke-width="4" d="m18.286 34.686 8.334 7.98 19.094-18.285"/></g></svg> -->
     <div class="container">
       <div id="form">
         <div id="formText">
-          <h1>Stay updated!</h1>
-          <p>Join 60,000+ product managers receiving monthly updates on</p>
+          <h1 style="margin-top: 40px;font-size: 40px;">Stay updated!</h1>
+          <p><span id="tickIcon">
+          </span> Join 60,000+ product managers receiving monthly updates on</p>
           <p>Measuring to ensure updates are a success</p>
           <p>And much more</p>
           <label for="#email">
