--- a/age-calculator-app-main/index.html
+++ b/age-calculator-app-main/index.html
@@ -20,7 +20,6 @@
           width: 100%;
           height: 80%;
         }
-
         #sign {
           transform: translate(50%);
           right: 50%;
@@ -29,6 +28,11 @@
           width: 90%;
         }
       }
+        @media only screen and (orientation:landscape){
+          .container{
+            height: 100%;
+          }
+        }
     </style>
   </head>
 
