--- a/base-apparel-coming-soon-master/index.html
+++ b/base-apparel-coming-soon-master/index.html
@@ -3,66 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+    <link rel="icon" href="images/favicon-32x32.png" />
+    <title>base-apparel</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap"
+      rel="stylesheet"
     />
-    <title>Frontend Mentor | Base Apparel coming soon page</title>
     <link rel="stylesheet" href="styles.css" />
     <style>
-      @media screen and (max-width:900px){
-        .container{
-          flex-direction: column-reverse;
-          width: 100%;
-          height: 100%;
-        }
-        .main,.sideImg{
-          width: 100%;
-        }
-        .sideImg{
-          background: url(images/hero-mobile.jpg);
-          height: 250px;
-          background-size: cover;
-        }
+      @media only screen and (max-width:900px){
+        
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <div class="main">
-        <div id="inside-main-centered">
-          <div id="logo">
-            <img src="images/logo.svg" alt="logo" />
-          </div>
-          <div id="text-and-input">
-            <div id="bigPara">
-              <p>We're</p>
-              <p>coming</p>
-              <p>soon</p>
-            </div>
-            <p id="smallPara">
-              Hello fellow shoppers! We're currently building our new fashion
-              store. Add your email below to stay up-to-date with announcements
-              and our launch deals.
+      <div class="leftSide">
+        <div class="logo">
+          <img src="images/logo.svg" alt="logo" />
+        </div>
+        <div class="textArea">
+          <p class="biggerText">
+            <span id="weare">WE'RE </span><br />
+            <span id="comingsoon">COMING <br />SOON</span>
+          </p>
+          <div class="smallerText">
+            <p>
+              Hello fellow shoppers. We 're currently building our new <br />
+              fashion store. Add your email below to stay up to date with <br />
+              announcements and our launch deals.
             </p>
-            <input type="text" id="input-email" placeholder="Email Address" />
+          </div>
+          <div class="emailInput">
+            <input type="text" id="email" placeholder="Email Address" />
+              <img id="arrow" src="images/icon-arrow.svg" alt="icon-arrow" />
+              <img src="images/icon-error.svg" alt="icon-arrow" id="hidden">
           </div>
         </div>
       </div>
-      <div class="sideImg">
-        <!-- <img src="images/hero-desktop.jpg" alt="hero.dsk"> -->
-      </div>
+      <div class="sideImg"></div>
     </div>
   </body>
 </html>
-
-<!-- We're coming soon
-
-Hello fellow shoppers! We're currently building our new fashion store. 
-Add your email below to stay up-to-date with announcements and our launch deals.
-
-Email Address
- -->
