--- a/blogr-landing-page-main/index.html
+++ b/blogr-landing-page-main/index.html
@@ -28,107 +28,107 @@
     <style>
       /* current breakpoitnt 840px */
       @media screen and (max-width: 850px) {
-        .cont1 .navbar {
-          padding-left: 1rem;
-          padding-right: 1rem;
-        }
-        .cont1 .navbar ul {
-          width: 100%;
-          justify-content: space-between;
-        }
-        .cont1 .navbar .mobmenu {
-          display: block;
-        }
-        .cont1 .navbar ul li,
-        .cont1 .navbar .btns {
-          display: none;
-        }
-        .cont2 {
-          padding: 0 0;
-        }
-        .cont2 .text {
-          width: 100%;
-          text-align: center;
-        }
-        .cont2 .sideimg {
-          width: 100%;
-          position: static;
-          margin-top: 3rem;
-        }
-        .cont2 #deskill {
-          display: none;
-        }
-        .cont2 #mobill {
-          display: block;
-          margin: auto;
-          max-width: 100%;
-        }
-        .cont3 {
-          margin-top: 3rem;
-        }
-        .cont3 .text {
-          width: 100%;
-          text-align: center;
-          padding: 1rem;
-        }
-        .cont3 .text h2 {
-          font-size: 2.5rem;
-        }
-        .cont3 .text p {
-          line-height: 2rem;
-          font-size: 1rem;
-        }
-        .cont4 {
-          margin-top: 2rem;
-          flex-direction: column;
-          padding: 0;
-          margin-bottom: 3rem;
-        }
-        .cont4 .sideimg {
-          width: 100%;
-          /* height: 359px; */
-        }
-        .cont4 .text .detail {
-          margin-top: 2rem;
-        }
-        .cont4 .sideimg .lapdesk {
-          display: none;
-        }
-        .cont4 .sideimg .lapmob {
-          display: block;
-          width: 100%;
-          height: auto;
-          margin: auto;
-        }
-        .cont4 .text {
-          width: 100%;
-          text-align: center;
-          padding: 1rem;
-        }
-        .cont5 {
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-        }
-        .cont5 ul {
-          margin: 2rem 0;
-          text-align: center;
-        }
-      }
-      @media screen and (max-width: 1150px) {
-        .cont1 #deskbg {
-          display: none;
-        }
-        .cont1 #mobbg {
-          display: block;
-          /* border: 4px solid green; */
-          position: absolute;
-          top: -20rem;
-          left: 50%;
-          transform: translateX(-50%);
-          z-index: -1;
-        }
-      }
+    .cont1 .navbar {
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+    .cont1 .navbar ul {
+      width: 100%;
+      justify-content: space-between;
+    }
+    .cont1 .navbar .mobmenu {
+      display: block;
+    }
+    .cont1 .navbar ul li,
+    .cont1 .navbar .btns {
+      display: none;
+    }
+    .cont2 {
+      padding: 0 0;
+    }
+    .cont2 .text {
+      width: 100%;
+      text-align: center;
+    }
+    .cont2 .sideimg {
+      width: 100%;
+      position: static;
+      margin-top: 3rem;
+    }
+    .cont2 #deskill {
+      display: none;
+    }
+    .cont2 #mobill {
+      display: block;
+      margin: auto;
+      max-width: 100%;
+    }
+    .cont3 {
+      margin-top: 3rem;
+    }
+    .cont3 .text {
+      width: 100%;
+      text-align: center;
+      padding: 4rem;
+    }
+    .cont3 .text h2 {
+      font-size: 2rem;
+    }
+    .cont3 .text p {
+      line-height: 2rem;
+      font-size: 1rem;
+    }
+    .cont4 {
+      margin-top: 2rem;
+      flex-direction: column;
+      padding: 0;
+      margin-bottom: 3rem;
+    }
+    .cont4 .sideimg {
+      width: 100%;
+      /* height: 359px; */
+    }
+    .cont4 .text .detail {
+      margin-top: 2rem;
+    }
+    .cont4 .sideimg .lapdesk {
+      display: none;
+    }
+    .cont4 .sideimg .lapmob {
+      display: block;
+      width: 100%;
+      height: auto;
+      margin: auto;
+    }
+    .cont4 .text {
+      width: 100%;
+      text-align: center;
+      padding: 1rem;
+    }
+    .cont5 {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .cont5 ul {
+      margin: 2rem 0;
+      text-align: center;
+    }
+  }
+  @media screen and (max-width: 1150px) {
+    .cont1 #deskbg {
+      display: none;
+    }
+    .cont1 #mobbg {
+      display: block;
+      /* border: 4px solid green; */
+      position: absolute;
+      top: -20rem;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: -1;
+    }
+  }
     </style>
   </head>
   <body>
@@ -156,12 +156,16 @@
             />
           </li>
           <li>
-            Connect
-            <img
-              src="images/icon-arrow-light.svg"
-              alt="arrow"
-              class="down-arrow"
-            />
+            <div class="connectmenu">
+              <p>
+                Connect
+                <img
+                  src="images/icon-arrow-light.svg"
+                  alt="arrow"
+                  class="down-arrow"
+                />
+              </p>
+            </div>
           </li>
         </ul>
         <div class="btns">
@@ -216,7 +220,9 @@
         </p>
       </div>
     </div>
+    <!-- <img src="images/illustration-phones.svg" alt="phones" class="phones"> -->
     <div class="cont3">
+      <img src="images/bg-pattern-circles.svg" alt="circles" class="circles">
       <div class="text">
         <h2>State of the Art Infrastructure</h2>
         <p>
@@ -288,5 +294,6 @@
         <li>LinkedIn</li>
       </ul>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
